# xq2sql

xq2sql_pkg/: README.md  pyproject.toml
xq2sql_pkg/src/xq2sql/: __init__.py  ast.py  cli.py  errors.py  ir.py  lexer.py  lowering.py  parser.py  schema.py  sql.py  translator.py
xq2sql_pkg/tests/: test_translator.py
