[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xq2sql"
version = "0.1.0"
description = "A working XQuery-to-SQL translator for a practical, explicitly supported subset of XQuery."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenAI"}]
license = {text = "MIT"}
keywords = ["xquery", "sql", "translator", "parser", "compiler"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
xq2sql = "xq2sql.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
